[package]
name = "worker-password-auth"
version = "0.1.0"
authors = ["James Birtles <james@birtles.dev>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
password-auth = "0.3"
wee_alloc = "0.4"

[profile.release]
opt-level = "s"
lto = true
